Add login button to register

--- a/src/login.html
+++ b/src/login.html
@@ -12,12 +12,13 @@
         <div class="flex gap-x-3">
           <component name="button-submit" props="Login" />
         </div>
-        <div class="mt-4 text-sm"></div>
-        <a
-          href="/user/register"
-          class="block text-slate-500 text-center hover:underline"
-          >Register</a
-        >
+        <div class="mt-4 text-sm">
+          <a
+            href="/user/register"
+            class="block text-slate-500 text-center hover:underline"
+            >Register</a
+          >
+        </div>
       </form>
       <component name="footer" />
       <script>
