--- a/src/register.html
+++ b/src/register.html
@@ -12,6 +12,13 @@
         <div class="flex gap-x-3">
           <component name="button-submit" props="Register" />
         </div>
+        <div class="mt-4 text-sm">
+          <a
+            href="/login"
+            class="block text-slate-500 text-center hover:underline"
+            >Login</a
+          >
+        </div>
       </form>
       <component name="footer" />
       <script>
