--- a/src/itemCreate.html
+++ b/src/itemCreate.html
@@ -60,6 +60,7 @@
               type: 'text',
               required: true,
               message: 'Title must be between 3 and 50 characters.',
+              event: ['keyup', 'input'],
               validator: (value) =>
                 Regex.validate(Regex.preset('text', 3, 50), value),
             },
@@ -69,6 +70,7 @@
               required: false,
               message:
                 'Description has a maximum length of 128 characters long.',
+              event: ['keyup', 'input'],
               validator: (value) =>
                 Regex.validate(Regex.preset('text', 0, 128), value),
             },
@@ -97,6 +99,7 @@
               required: false,
               message:
                 'Description has a maximum length of 128 characters long.',
+              event: ['keyup', 'input'],
               validator: (value) =>
                 Regex.validate(Regex.preset('text', 0, 128), value),
             },
@@ -105,6 +108,7 @@
               type: 'text',
               required: false,
               message: 'Labels must be a space-separated list - dash allowed.',
+              event: ['keyup', 'input'],
               validator: (value) =>
                 Regex.validate(Regex.preset('labels', null, null), value),
             },
