--- a/src/register.html
+++ b/src/register.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <component name="head" />
   <body>
-    <div id="app" class="pb-16 sm:pb-0 sm:pt-16">
+    <div id="app">
       <component name="notifications" />
-      <component name="pagetitle-center" props="Register" />
+      <div class="pt-24 max-w-md mx-auto">
+        <img class="w-64" src="/assets/img/bucket_logo.svg" />
+      </div>
+      <div class="max-w-md mx-auto">
+        <component name="pagetitle" props="Register" />
+      </div>
       <form class="max-w-md mx-auto p-4 sm:px-6 lg:px-8">
         <component name="input-text" props="text;name;Name;;" />
         <component name="input-text" props="email;email;Email;;" />
@@ -12,12 +17,9 @@
         <div class="flex gap-x-3">
           <component name="button-submit" props="Register" />
         </div>
-        <div class="mt-4 text-sm">
-          <a
-            href="/login"
-            class="block text-slate-500 text-center hover:underline"
-            >Login</a
-          >
+        <div class="mt-6 text-sm">
+          <span class="pr-2 text-slate-500">Already have an account?</span>
+          <a href="/login" class="underline hover:text-blue-500">Login</a>
         </div>
       </form>
       <component name="footer" />
