--- a/src/profile.html
+++ b/src/profile.html
@@ -23,6 +23,9 @@
           <component name="button" props="Cancel;" />
           <component name="button-submit" props="Update;profile" />
         </div>
+        <div class="sm:hidden mt-6 text-sm">
+          <a href="/logout" class="underline hover:text-blue-500">Logout</a>
+        </div>
       </form>
       <component name="footer" />
       <script>
