--- a/src/itemCreate.html
+++ b/src/itemCreate.html
@@ -4,7 +4,7 @@
   <body>
     <div id="app" class="pb-16 sm:pb-0 sm:pt-16">
       <component name="nav" props="-active;;;text-blue-500;;" />
-      <component name="pagetitle" props="Create Bucket Item" />
+      <component name="pagetitle-center" props="Create Bucket Item" />
       <form class="max-w-md mx-auto p-4 sm:px-6 lg:px-8">
         <component name="input-text" props="text;title;Title;;" />
         <component
@@ -36,20 +36,24 @@
 
           try {
             const buckets = await API.getBuckets();
-            if (buckets.length > 0) {
-              const sortedBuckets = Format.sort(buckets, 'name', false);
+            const sortedBuckets = Format.sort(buckets, 'name', false);
 
-              const select = query('#bucket');
+            const select = query('#bucket');
 
-              sortedBuckets.forEach((bucket) => {
-                let option = document.createElement('option');
+            // add no-bucket option
+            sortedBuckets.unshift({
+              id: 0,
+              name: '-- No bucket',
+            });
 
-                option.textContent = bucket.name;
-                option.setAttribute('value', bucket.id);
+            sortedBuckets.forEach((bucket) => {
+              let option = document.createElement('option');
 
-                select.appendChild(option);
-              });
-            }
+              option.textContent = bucket.name;
+              option.setAttribute('value', bucket.id);
+
+              select.appendChild(option);
+            });
           } catch (error) {
             console.log('Could not load buckets: ', error);
           }
