--- a/src/bucketEdit.html
+++ b/src/bucketEdit.html
@@ -4,7 +4,7 @@
   <body>
     <div id="app" class="pb-16 sm:pb-0 sm:pt-16">
       <component name="nav" props="-active;;;text-blue-500;;" />
-      <component name="pagetitle" props="Edit Bucket" />
+      <component name="pagetitle-center" props="Edit Bucket" />
       <form class="max-w-md mx-auto p-4 sm:px-6 lg:px-8">
         <component name="input-text" props="text;name;Name;;" />
         <component name="input-select" props="color;Color;" />
