Add note to image input

--- a/src/profile.html
+++ b/src/profile.html
@@ -18,7 +18,10 @@
         <component name="input-text" props="text;name;Name;;" />
         <component name="input-text" props="email;email;Email;;" />
         <component name="input-text" props="password;password;Password;;" />
-        <component name="input-file" props="picture;Picture;Optional" />
+        <component
+          name="input-file"
+          props="picture;Picture;Optional;Selecting a picture will override an existing one."
+        />
         <div class="flex gap-x-3">
           <component name="button" props="Cancel;" />
           <component name="button-submit" props="Update;profile" />
