--- a/src/itemEdit.html
+++ b/src/itemEdit.html
@@ -20,7 +20,10 @@
           name="input-text"
           props="date;dateAccomplishedOn;Date accomplished on;;Optional"
         />
-        <component name="input-file" props="image;Image;Optional" />
+        <component
+          name="input-file"
+          props="image;Image;Optional;Selecting an image will override an existing one."
+        />
         <component name="input-text" props="text;location;Location;;Optional" />
         <component name="input-text" props="text;labels;Labels;;Optional" />
         <div class="flex gap-x-3">
