Fix image notice

--- a/src/itemCreate.html
+++ b/src/itemCreate.html
@@ -16,7 +16,10 @@
           name="input-text"
           props="date;dateToAccomplish;Date to accomplish;;Optional"
         />
-        <component name="input-file" props="image;Image;Optional" />
+        <component
+          name="input-file"
+          props="image;Image;Optional;Selecting an image will override an existing one."
+        />
         <component name="input-text" props="text;location;Location;;Optional" />
         <component name="input-text" props="text;labels;Labels;;Optional" />
         <div class="flex gap-x-3">
